# fastapi-settings-template

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  run.py
alembic/: env.py
app/: main.py
app/config/: app.py  database.py  logging.py  settings.py
app/config/envs/: .env.example
app/config/yaml/: default.yaml  local.yaml
app/database/: annotations.py  engine.py
docker/: Dockerfile  docker-compose.yml
